@@ -1,5 +1,9 @@
 [b]Version 0.5.63 (not released yet)[/b]:
 
+(2007-11-28)
+ * Added a new experimental code to disable the screensaver (and monitor
+   turning off) on Windows.
+ 
 (2007-11-27)
  * If mplayer is compiled with gui support, it seems pause may not work 
    properly. I think this is fixed now, by changing the PAUSE command in
